<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCuration</string>
    <string name="action_settings">Settings</string>

    <!-- Article list -->
    <string name="all">All articles</string>
    <string name="sample_rss_title">hogehogehoge</string>
    <string name="sample_article_url">http://www.hoge.com/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</string>

    <!-- rss list -->
    <string name="show_all_rsses">Show all of rsses</string>
    <string name="hide_rsses">Hide rsses</string>
    <string name="loading">Updating…</string>

    <string name="add_filter_button">+</string>
    <string name="keyword">Keyword</string>
    <string name="keyword_description">When the keyword is included in article title, it becomes read status</string>
    <string name="include">include</string>
    <string name="article_url">Article URL</string>
    <string name="article_url_description">When the URL is included in article URL, it becomes read status</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_empty_error">Please input the title</string>
    <string name="both_keyword_and_url_empty_error">Please input the keyword or URL</string>
    <string name="same_filter_exists_error">Same filter exists</string>
    <string name="task_exists_error">Updating....Please wait.</string>
    <string name="ok">OK</string>
    <string name="app_icon_description">icon</string>
    <string name="no_rss_message">Let\'s add first rss!</string>

    <string name="rss">RSS</string>
    <string name="add_rss">RSS registration</string>
    <string name="add_rss_success">Succeeded to add rss</string>
    <string name="add_rss_error_generic">Failed to add rss</string>
    <string name="add_rss_error_invalid_url">Invalid URL</string>
    <string name="adding_rss">Adding new rss...</string>

    <string name="delete_rss">Delete the rss</string>
    <string name="delete_rss_alert">Do you delete the rss ?</string>
    <string name="delete">Delete</string>
    <string name="finish_delete_rss_success">Succeeded to delete the rss</string>
    <string name="finish_delete_rss_fail">Failed to delete the rss</string>

    <string name="edit_rss_title">Edit rss title</string>
    <string name="new_title">New title</string>
    <string name="empty_title">New title is empty</string>
    <string name="edit_rss_title_success">Succeede to edit the title</string>
    <string name="edit_rss_title_error">Failed to edit the title</string>

    <string name="target_rss">Target rss</string>
    <string name="rss_url">RSS or\nPage URL :</string>

    <string name="home">Home</string>

    <!-- Filter -->
    <string name="filter">Filter</string>
    <string name="filter_saved">Succeeded to register new filter</string>
    <string name="filter_saved_error">Failed to register new filter</string>
    <string name="percent_only_error">You can not add this word</string>
    <string name="filter_title">Filter title</string>
    <string name="add_filter">Register</string>
    <string name="delete_filter">Delete filter</string>
    <string name="edit_filter">Edit filter</string>
    <string name="not_get_hatena_point">Updating...</string>
    <string name="none">None</string>
    <string name="no_filter">Let\'s add first filter!</string>
    <string name="sample_filter_title">Sample filter title</string>
    <string name="sample_filter_target">Sample target filter</string>
    <string name="sample_filter_keyword">Keyword: Sample</string>
    <string name="sample_filter_url">URL: http://www.google.com</string>
    <string name="done">done</string>
    <string name="title_select_filter_rss">Select RSS</string>
    <string name="filter_name">Filter title</string>
    <string name="url">URL: %1$s</string>

    <!-- Settings -->
    <string name="setting">Settings</string>
    <string name="auto_update_setting">Auto Update</string>
    <string name="see_setting">Browsing</string>
    <string name="interval">Interval</string>
    <string name="hour">hour</string>
    <string name="article_sort">Sort from latest</string>
    <string name="all_read_behavior">Behavior you read all of the articles</string>
    <string name="all_read_back">Go back to rss list</string>
    <string name="all_read_not_back">Not go back to rss list</string>
    <string name="open_internal">Internal browser</string>
    <string name="swipe_direction">Swipe direction</string>
    <string name="right_to_left">Read article by swipe from right to left</string>
    <string name="left_to_right">Read article by swipe from left to right</string>
    <string name="save">Save</string>
    <string name="saved">Settings are saved</string>
    <string name="debug">Debug</string>
    <string name="import_db">Import DB</string>
    <string name="export_db">Export DB</string>
    <string name="key_update_interval">keyUpdateInterval</string>
    <string name="key_article_sort">keyArticleSort</string>
    <string name="key_internal_browser">keyInternalBrowser</string>
    <string name="key_all_read_behavior">keyAllReadBehavior</string>
    <string name="key_swipe_direction">keySwipeDirection</string>
    <string name="key_license">keyLicense</string>
    <string name="key_import_db">keyImportDb</string>
    <string name="key_export_db">keyExportDb</string>

    <string name="all_read">Read all</string>
    <string name="no_article">No unread articles</string>

    <string name="icon">Icon</string>
    <string name="license">License</string>
    <string name="license_info">License Information</string>


    <!-- Article search -->
    <string name="search_article">Search articles</string>
    <string name="no_search_result">No result</string>
    <string name="search_result">Search result</string>

    <string name="hatena">Hatena</string>

    <string name="share">Share</string>

    <!-- Error -->
    <string name="error_xml_parse">Failed to parse the site</string>
    <string name="error_io">Connection Error</string>
    <string name="error_rss_is_not_found">No rss found</string>
    <string name="error_invalid_rss_url">Invalid rss URL</string>
    <string name="error_invalid_html">Invalid HTML</string>

    <!-- Curation -->
    <string name="curation">Curation</string>
    <string name="curation_name">Curation Name</string>
    <string name="no_curation_message">Let\'s register first curation</string>
    <string name="add_word">Add</string>
    <string name="adding_curation">Adding curation...</string>
    <string name="word_setting">Word setting</string>
    <string name="delete_curation">Delete curation</string>
    <string name="edit_curation">Edit curation</string>
    <string name="title_activity_add_curation">Add curation</string>
    <string name="title_activity_edit_curation">Edit curation</string>
    <string name="empty_curation_name">Title is empty</string>
    <string name="empty_word">You can not add empty word</string>
    <string name="empty_word_list">No word</string>
    <string name="duplicate_word">Same word exists</string>
    <string name="duplicate_curation_name">Same title curation exists</string>
    <string name="curation_added_success">Succeeded to add curation </string>
    <string name="curation_added_error">Failed to add curation</string>

    <!-- Search rss -->
    <string name="search_rss">Search site or input URL</string>

    <!-- Tutorial -->
    <string name="tutorial_go_to_search_rss_description">Thank you for installing. Let\'s subscribe RSS.</string>
    <string name="tutorial_search_rss_description">You can search the site or input RSS URL directly.</string>
    <string name="tutorial_add_rss_description">When you open the site, press the button and start subscription.</string>
    <string name="tutorial_next">Next</string>
    <string name="tutorial_close">Close</string>

    <!-- Google Analytics -->
    <string name="ga_not_all_title">フィード</string>
    <string name="action">アクション</string>
    <string name="tap_add_rss">フィード追加タップ</string>
    <string name="tap_add_curation">キュレーション追加タップ</string>
    <string name="tap_add_filter">フィルター追加タップ</string>
    <string name="tap_article_internal">記事を内部ブラウザで開く</string>
    <string name="tap_article_external">記事を外部ブラウザで開く</string>
    <string name="share_article">記事共有</string>
    <string name="read_all_articles">記事全既読</string>
    <string name="update_rss">フィード更新</string>
    <string name="scroll_article_list">記事リストをスクロール</string>
    <string name="swipe_left_to_right">左から右にスワイプ</string>
    <string name="swipe_right_to_left">右から左にスワイプ</string>
    <string name="change_auto_update_interval">自動更新間隔変更</string>
    <string name="change_all_read_behavior">全部記事読了後の動作変更</string>
    <string name="change_swipe_direction">スワイプ方向変更</string>
    <string name="change_aricle_sort">記事並び替え方法変更</string>
    <string name="change_browser_option">記事を開くブラウザ変更</string>
    <string name="add_empty_curation_title">キュレーション名が空で追加</string>
    <string name="add_empty_curation_word">キュレーション条件単語が空で追加</string>
    <string name="add_same_curation_name">同じキュレーション名で追加</string>
    <string name="add_new_curation">キュレーション追加</string>
    <string name="update_curation">キュレーション更新</string>
    <string name="add_rss_input_url">URL入力からRSS追加</string>
    <string name="add_rss_input_url_error">URL入力からRSS追加エラー</string>
    <string name="add_rss_from_intent">共有からフィード追加</string>
    <string name="add_rss_from_intent_error">共有からフィード追加エラー</string>
    <string name="add_new_filter">フィルター追加</string>
    <string name="update_filter">フィルター更新</string>
    <string name="add_new_filter_no_title">タイトルなしフィルター追加</string>
    <string name="add_new_filter_no_keyword_url">キーワードURLなしフィルター追加</string>
    <string name="add_new_filter_cancel">フィルター追加キャンセル</string>
</resources>
