<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/add_rss"/>

    <item
        android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search_article"/>

 	<item
        android:id="@+id/setting"
        android:orderInCategory="3"
        android:icon="@drawable/ic_settings"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/setting"/>
</menu>
