<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center_vertical"
			android:src="@drawable/ic_filter_list_black"
            android:contentDescription="@string/filter" />
		<EditText
			android:id="@+id/filterTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/filter"/>
	</LinearLayout>
    <TextView
		android:id="@+id/tv_target_rss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/ic_rss_feed_black"
        android:hint="@string/target_rss"
        android:textSize="20sp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_description_black"
            android:contentDescription="@string/filter" />
	    <EditText
	        android:id="@+id/filterKeyword"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:layout_weight="90"
            android:hint="@string/keyword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_web_black"
            android:contentDescription="@string/article_url" />

        <EditText
            android:id="@+id/filterUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/article_url"/>
    </LinearLayout>
</LinearLayout>
